--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reforged-native",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
@@ -9,16 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.3",
+    "@react-native-clipboard/clipboard": "^1.14.1",
     "@react-navigation/material-top-tabs": "^6.6.13",
     "axios": "^1.7.2",
     "expo": "~51.0.18",
     "expo-constants": "^16.0.2",
+    "expo-font": "^12.0.7",
     "expo-linking": "^6.3.1",
     "expo-router": "^3.5.17",
     "expo-status-bar": "^1.12.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.3",
-    "react-native-pager-view": "^6.3.3",
+    "react-native-pager-view": "6.3.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-tab-view": "^3.5.2",
@@ -27,6 +31,9 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "tailwindcss": "3.3.2",
     "typescript": "~5.3.3"
   },
   "private": true
