--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reforged-native",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
@@ -15,6 +15,7 @@
     "axios": "^1.7.2",
     "expo": "~51.0.18",
     "expo-constants": "^16.0.2",
+    "expo-doctor": "^1.6.1",
     "expo-font": "^12.0.7",
     "expo-linking": "^6.3.1",
     "expo-router": "^3.5.17",
